# defcon-asia-2026

./: .gitignore  .gitmodules  README.md
booth/: one-pager.md  process.md  rubric.md  schedule.md
demos/d1-rag-injection/: .gitignore  README.md  app.py  headless_query.py  headless_query_openai.py  indexer.py  llm.py  reindex.sh  requirements.txt  retriever.py
demos/d1-rag-injection/docs/: code_of_conduct.md  executive_compensation.md  leave_policy.md  remote_work_policy.md
demos/d2-safety-bypass/: .gitignore  README.md  client.py  rehearsal-2026-04-27.md  requirements.txt  runsheet.example.md
missions/: m1-signal-extractor.md  m2-stealth-architect.md  m3-tdd-speedrun.md
missions/_starter/m1/: README.md  REJECTIONS.template.md  SPEC.template.md  filter_engine.py  generate_data.py  narrator.py  pyproject.toml
missions/_starter/m1/data/: cloudtrail-sample.jsonl
missions/_starter/m1/tests/: test_filter.py
missions/_starter/m2/: README.md  REJECTIONS.template.md  SPEC.template.md  pyproject.toml  teardown.sh
missions/_starter/m2/prompts/: architect.md  lure_variants.md
missions/_starter/m2/sandbox/: docker-compose.yml
missions/_starter/m2/tests/: test_compose_policy.py  test_lure_schema.py
missions/_starter/m2/validators/: compose_policy.py  lure_schema.py
missions/_starter/m3/nric-redactor/: README.md  REJECTIONS.template.md  SPEC.template.md  pyproject.toml  redactor.py
missions/_starter/m3/nric-redactor/tests/: test_redactor.py
site/: index.html
talks/: a1-ai-red-teaming.md  a1-slides.md  a2-slides.md  a2-vibe-coding-live.md
(+14 files in other folders)
