[project]
name = "signal-extractor"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=filter_engine --cov=narrator --cov-report=term-missing"

[tool.coverage.run]
branch = true
