[project]
name = "stealth-architect"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.setuptools]
packages = ["validators"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=validators --cov-report=term-missing"

[tool.coverage.run]
branch = true
