[project]
name = "nric-redactor"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=redactor --cov-report=term-missing"

[tool.coverage.run]
branch = true
